// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer should render components list layout 1`] = `
<div>
  <ReactComponent
    codeSamples="collapse"
    component={
      Object {
        "filepath": "components/foo.js",
        "name": "Foo",
        "pathLine": "components/foo.js",
        "props": Object {
          "description": "Foo foo",
        },
      }
    }
    depth={3}
    key="0"
    propsMethods="collapse"
  />
  <ReactComponent
    codeSamples="collapse"
    component={
      Object {
        "filepath": "components/bar.js",
        "name": "Bar",
        "pathLine": "components/bar.js",
        "props": Object {
          "description": "Bar bar",
        },
      }
    }
    depth={3}
    key="1"
    propsMethods="collapse"
  />
</div>
`;

exports[`should render components list 1`] = `
<ComponentsRenderer>
  <ReactComponent
    codeSamples="collapse"
    component={
      Object {
        "filepath": "components/foo.js",
        "name": "Foo",
        "pathLine": "components/foo.js",
        "props": Object {
          "description": "Foo foo",
        },
      }
    }
    depth={3}
    key="components/foo.js"
    propsMethods="collapse"
  />
  <ReactComponent
    codeSamples="collapse"
    component={
      Object {
        "filepath": "components/bar.js",
        "name": "Bar",
        "pathLine": "components/bar.js",
        "props": Object {
          "description": "Bar bar",
        },
      }
    }
    depth={3}
    key="components/bar.js"
    propsMethods="collapse"
  />
</ComponentsRenderer>
`;
